checking_data2 continued

--- a/behind_the_scenes/behind_the_scenes.ipynb
+++ b/behind_the_scenes/behind_the_scenes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -35,8 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "trip = pd.read_csv('trip.csv')\n",
