prepare for merging

--- a/scraping/scraping.ipynb
+++ b/scraping/scraping.ipynb
@@ -590,6 +590,200 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### multiple requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[47.50202, 19.04901], [40.757339, -73.985992], [51.753738, -1.26346]]"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lat_nador_st = 47.502020\n",
+    "lon_nador_st = 19.049010\n",
+    "\n",
+    "lat_times_suqare = 40.757339\n",
+    "lon_times_square = -73.985992\n",
+    "\n",
+    "lat_oxford = 51.753738\n",
+    "lon_oxford = -1.263460\n",
+    "\n",
+    "latlon_list = [[lat_nador_st, lon_nador_st], [lat_times_suqare, lon_times_square], [lat_oxford, lon_oxford]]\n",
+    "latlon_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.open-notify.org/iss-pass.json?lat=47.50202&lon=19.04901&n=5\n",
+      "http://api.open-notify.org/iss-pass.json?lat=40.757339&lon=-73.985992&n=5\n",
+      "http://api.open-notify.org/iss-pass.json?lat=51.753738&lon=-1.26346&n=5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for latlon in latlon_list:\n",
+    "    url = \"http://api.open-notify.org/iss-pass.json?lat={}&lon={}&n=5\".format(latlon[0], latlon[1])\n",
+    "    print(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.open-notify.org/iss-pass.json?lat=47.50202&lon=19.04901&n=5\n",
+      "{'message': 'success', 'request': {'altitude': 100, 'datetime': 1544110605, 'latitude': 47.50202, 'longitude': 19.04901, 'passes': 5}, 'response': [{'duration': 636, 'risetime': 1544114691}, {'duration': 627, 'risetime': 1544120483}, {'duration': 442, 'risetime': 1544126321}, {'duration': 502, 'risetime': 1544180663}, {'duration': 636, 'risetime': 1544186349}]} \n",
+      "\n",
+      "http://api.open-notify.org/iss-pass.json?lat=40.757339&lon=-73.985992&n=5\n",
+      "{'message': 'success', 'request': {'altitude': 100, 'datetime': 1544110512, 'latitude': 40.757339, 'longitude': -73.985992, 'passes': 5}, 'response': [{'duration': 337, 'risetime': 1544113877}, {'duration': 629, 'risetime': 1544119474}, {'duration': 612, 'risetime': 1544125278}, {'duration': 547, 'risetime': 1544131151}, {'duration': 577, 'risetime': 1544136985}]} \n",
+      "\n",
+      "http://api.open-notify.org/iss-pass.json?lat=51.753738&lon=-1.26346&n=5\n",
+      "{'message': 'success', 'request': {'altitude': 100, 'datetime': 1544110606, 'latitude': 51.753738, 'longitude': -1.26346, 'passes': 5}, 'response': [{'duration': 641, 'risetime': 1544114471}, {'duration': 637, 'risetime': 1544120260}, {'duration': 578, 'risetime': 1544126053}, {'duration': 227, 'risetime': 1544131951}, {'duration': 464, 'risetime': 1544186311}]} \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "resp_json_list = []\n",
+    "for latlon in latlon_list:\n",
+    "    url = \"http://api.open-notify.org/iss-pass.json?lat={}&lon={}&n=5\".format(latlon[0], latlon[1])\n",
+    "    print(url)\n",
+    "    resp = requests.get(url)\n",
+    "    time.sleep(3)\n",
+    "    resp_json = json.loads(resp.text)\n",
+    "    print(resp_json, '\\n')\n",
+    "    resp_json_list.append(resp_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'message': 'success',\n",
+       " 'request': {'altitude': 100,\n",
+       "  'datetime': 1544110605,\n",
+       "  'latitude': 47.50202,\n",
+       "  'longitude': 19.04901,\n",
+       "  'passes': 5},\n",
+       " 'response': [{'duration': 636, 'risetime': 1544114691},\n",
+       "  {'duration': 627, 'risetime': 1544120483},\n",
+       "  {'duration': 442, 'risetime': 1544126321},\n",
+       "  {'duration': 502, 'risetime': 1544180663},\n",
+       "  {'duration': 636, 'risetime': 1544186349}]}"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resp_json_list[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['message', 'request', 'response'])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nador_resp = resp_json_list[0]\n",
+    "nador_resp.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'duration': 636, 'risetime': 1544114691},\n",
+       " {'duration': 627, 'risetime': 1544120483},\n",
+       " {'duration': 442, 'risetime': 1544126321},\n",
+       " {'duration': 502, 'risetime': 1544180663},\n",
+       " {'duration': 636, 'risetime': 1544186349}]"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nador_resp['response']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first risetime above Nador street will be at 1544114691\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The first risetime above Nador street will be at {}'.format(nador_resp['response'][0]['risetime']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### ZIP codes"
    ]
   },
@@ -3443,6 +3637,205 @@
     "    soup = BeautifulSoup(googleresponse.content, 'html.parser')\n",
     "    for zipcode in soup.find_all('span', class_='ED44Kd'):\n",
     "        print(zipcode.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "San Jose\n",
+      "94088\n",
+      ",94089\n",
+      ",94538\n",
+      ",94560\n",
+      ",95002\n",
+      ",95008\n",
+      ",95013\n",
+      ",95035\n",
+      ",95037\n",
+      ",95050\n",
+      ",95054\n",
+      ",95101\n",
+      ",95103\n",
+      ",95106\n",
+      ",95108\n",
+      ",95109\n",
+      ",95110\n",
+      ",95111\n",
+      ",95112\n",
+      ",95113\n",
+      ",95115\n",
+      ",95116\n",
+      ",95117\n",
+      ",95118\n",
+      ",95119\n",
+      ",95120\n",
+      ",95121\n",
+      ",95122\n",
+      ",95123\n",
+      ",95124\n",
+      ",95125\n",
+      ",95126\n",
+      ",95127\n",
+      ",95128\n",
+      ",95129\n",
+      ",95130\n",
+      ",95131\n",
+      ",95132\n",
+      ",95133\n",
+      ",95134\n",
+      ",95135\n",
+      ",95136\n",
+      ",95138\n",
+      ",95139\n",
+      ",95141\n",
+      ",95148\n",
+      ",95150\n",
+      ",95151\n",
+      ",95152\n",
+      ",95153\n",
+      ",95154\n",
+      ",95155\n",
+      ",95156\n",
+      ",95157\n",
+      ",95158\n",
+      ",95160\n",
+      ",95161\n",
+      ",95164\n",
+      ",95170\n",
+      ",95172\n",
+      ",95173\n",
+      ",95190\n",
+      ",95191\n",
+      ",95192\n",
+      ",95193\n",
+      ",95194\n",
+      ",95196\n",
+      "Redwood City\n",
+      "94002\n",
+      ",94061\n",
+      ",94062\n",
+      ",94063\n",
+      ",94064\n",
+      ",94065\n",
+      ",94070\n",
+      "Mountain View\n",
+      "94039\n",
+      ",94040\n",
+      ",94041\n",
+      ",94042\n",
+      ",94043\n",
+      ",94085\n",
+      ",94303\n",
+      "Palo Alto\n",
+      "94020\n",
+      ",94022\n",
+      ",94024\n",
+      ",94028\n",
+      ",94301\n",
+      ",94302\n",
+      ",94303\n",
+      ",94304\n",
+      ",94306\n",
+      ",95033\n",
+      "San Francisco\n",
+      "94016\n",
+      ",94102\n",
+      ",94103\n",
+      ",94104\n",
+      ",94105\n",
+      ",94107\n",
+      ",94108\n",
+      ",94109\n",
+      ",94110\n",
+      ",94111\n",
+      ",94112\n",
+      ",94114\n",
+      ",94115\n",
+      ",94116\n",
+      ",94117\n",
+      ",94118\n",
+      ",94119\n",
+      ",94120\n",
+      ",94121\n",
+      ",94122\n",
+      ",94123\n",
+      ",94124\n",
+      ",94125\n",
+      ",94126\n",
+      ",94127\n",
+      ",94129\n",
+      ",94130\n",
+      ",94131\n",
+      ",94132\n",
+      ",94133\n",
+      ",94134\n",
+      ",94137\n",
+      ",94139\n",
+      ",94140\n",
+      ",94141\n",
+      ",94142\n",
+      ",94143\n",
+      ",94144\n",
+      ",94145\n",
+      ",94146\n",
+      ",94147\n",
+      ",94151\n",
+      ",94153\n",
+      ",94154\n",
+      ",94156\n",
+      ",94158\n",
+      ",94159\n",
+      ",94160\n",
+      ",94161\n",
+      ",94162\n",
+      ",94163\n",
+      ",94164\n",
+      ",94171\n",
+      ",94172\n",
+      ",94177\n",
+      ",94188\n"
+     ]
+    }
+   ],
+   "source": [
+    "city_rows = []\n",
+    "for city in ['San Jose', 'Redwood City', 'Mountain View', 'Palo Alto',\n",
+    "       'San Francisco']:\n",
+    "    print(city)\n",
+    "    searchphrase = city.replace(' ','+')\n",
+    "    googleresponse = requests.get(\"https://www.google.com/search?q={}+zip+code\".format(searchphrase))\n",
+    "    soup = BeautifulSoup(googleresponse.content, 'html.parser')\n",
+    "    for zipcode in soup.find_all('span', class_='ED44Kd'):\n",
+    "        print(zipcode.text)\n",
+    "        city_rows.append({'city': city, 'zip': zipcode.text.strip(',')})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(city_rows).to_csv('city_zip_df.csv', index=False)"
    ]
   },
   {
