--- a/behind_the_scenes/behind_the_scenes.ipynb
+++ b/behind_the_scenes/behind_the_scenes.ipynb
@@ -564,12 +564,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resp = requests.get(\"https://www.google.com/search?q=South%20Van%20Ness%20at%20Market%20bike%20station\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup = BeautifulSoup(resp.content, 'html.parser')\n",
+    "soup.find_all('span', class_='LrzXr')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<span class=\"gbi\" id=\"gbn\"></span>,\n",
+       " <span class=\"gbf\" id=\"gbf\"></span>,\n",
+       " <span id=\"gbe\"></span>,\n",
+       " <span class=\"sbico\" style=\"background-image:url(/images/nav_logo229.png);background-repeat:no-repeat;height:14px;width:13px;display:block;background-position:-36px -111px\"></span>,\n",
+       " <span class=\"CiacGf\"></span>,\n",
+       " <span class=\"st\">John McDonell John has been in the <b>bicycle</b> industry full-time since 1991. After a <br/>\n",
+       " 6 year career as a Washington D.C. <b>bicycle</b> messenger he began repairing ...</span>,\n",
+       " <span class=\"CiacGf\"></span>,\n",
+       " <span class=\"st\"><b>Bike</b> Sharing in the Bay Area. ... 913448, 932, 8/31/2015 21:57, Post at Kearny, <br/>\n",
+       " 47, 8/31/2015 22:12, <b>South</b> Van <b>Ness</b> at <b>Market</b>, 66, 472, Subscriber, 94702 ... <br/>\n",
+       " The largest number of trips started at the Caltrain <b>Station</b> on Townsend and 4th in<br/>\n",
+       "  ...</span>,\n",
+       " <span class=\"CiacGf\"></span>,\n",
+       " <span class=\"st\">Analysis of public dataset about <b>bicycle</b> trips under Bay Area <b>Bike</b> Share program <br/>\n",
+       " ... <b>Bike</b> sharing programs usually have a problem of unbalanced <b>stations</b> where <br/>\n",
+       " the number of .... 66, <b>South</b> Van <b>Ness</b> at <b>Market</b>, Bring 5 <b>bikes</b> used few times.</span>,\n",
+       " <span class=\"CiacGf\"></span>,\n",
+       " <span class=\"st\">22 Aug 2018 <b>...</b> using data from SF Bay Area <b>Bike</b> Share · ..... 1, 4073, 1067, 8/29/2013 9:24, <br/>\n",
+       " <b>South</b> Van <b>Ness</b> at <b>Market</b>, 66, 8/29/2013 9:42, San .... Lets create a quick plot to <br/>\n",
+       " show the distribution of available <b>bike</b> readings for all <b>stations</b>.</span>,\n",
+       " <span class=\"CiacGf\"></span>,\n",
+       " <span class=\"st\">10 Apr 2018 <b>...</b> Data was pulled from SF Bay Area <b>Bike</b> Share data contributed by ... <br/>\n",
+       " <b>start_station_name</b> &lt;chr&gt; \"<b>South</b> Van <b>Ness</b> at <b>Market</b>\", \"San Jose City .</span>,\n",
+       " <span class=\"st\">25 Feb 2017 <b>...</b> Analysis of San Francisco Bay Area <b>Bike</b> Sharing Program ... their current <br/>\n",
+       " location and then able to dock at their destination <b>bike station</b> upon arriving. ... <br/>\n",
+       " tripdata.csv\") sf &lt;- c(\"<b>South</b> Van <b>Ness</b> at <b>Market</b>\", \"<b>Market</b> at 10th\", \"San ...</span>,\n",
+       " <span class=\"st\">1 Aug 2018 <b>...</b> The number of trips to and from each of the 116 <b>bike</b> share <b>stations</b> operating in <br/>\n",
+       " ... 4San Francisco Municipal Transportation Agency, 1 <b>S</b>. Van <b>Ness</b> Ave., ...... <br/>\n",
+       " Insights gained from these models may also inform <b>marketing</b> cam-.</span>,\n",
+       " <span style=\"float:left\"><span class=\"mime\">[PDF]</span> </span>,\n",
+       " <span class=\"mime\">[PDF]</span>,\n",
+       " <span class=\"CiacGf\"></span>,\n",
+       " <span class=\"st\">... of this strategy. To this end, <b>stations</b> are proposed for North and <b>South</b> <br/>\n",
+       " Memphis. M. i s <b>s</b> i <b>s s</b> ...... snapshot of the variation of <b>bike</b> share <b>market</b> <br/>\n",
+       " segments of ...</span>,\n",
+       " <span class=\"CiacGf\"></span>,\n",
+       " <span class=\"st\">14 Aug 2013 <b>...</b> The man was riding the <b>bicycle</b> westbound on <b>Market</b> and according to SFPD .... <br/>\n",
+       " The driver was making a right turn onto <b>South</b> Van <b>Ness</b> from 16th Street .... rear-<br/>\n",
+       " ended by a gray Volvo <b>station</b> wagon as he was riding north on ...</span>,\n",
+       " <span class=\"st\">Quick LinksTypes of <b>Bike Parking</b> | Request a <b>Bike</b> Rack | <b>Bike Parking</b> ... <b>bicycle</b> <br/>\n",
+       " <b>parking stations</b> in three areas of San Francisco, including the Mid-<b>Market</b> Area, ...</span>,\n",
+       " <span class=\"csb\" style=\"background-position:-24px 0;width:28px\"></span>,\n",
+       " <span class=\"csb\" style=\"background-position:-53px 0;width:20px\"></span>,\n",
+       " <span class=\"csb\" style=\"background-position:-74px 0;width:20px\"></span>,\n",
+       " <span class=\"csb\" style=\"background-position:-74px 0;width:20px\"></span>,\n",
+       " <span class=\"csb\" style=\"background-position:-74px 0;width:20px\"></span>,\n",
+       " <span class=\"csb\" style=\"background-position:-74px 0;width:20px\"></span>,\n",
+       " <span class=\"csb\" style=\"background-position:-74px 0;width:20px\"></span>,\n",
+       " <span class=\"csb\" style=\"background-position:-74px 0;width:20px\"></span>,\n",
+       " <span class=\"csb\" style=\"background-position:-74px 0;width:20px\"></span>,\n",
+       " <span class=\"csb\" style=\"background-position:-74px 0;width:20px\"></span>,\n",
+       " <span class=\"csb\" style=\"background-position:-96px 0;width:71px\"></span>,\n",
+       " <span style=\"display:block;margin-left:53px\">Következő</span>]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find_all('span')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "<span class=\"LrzXr\">S Van Ness Ave, San Francisco, CA 94103, USA</span>"
+   ]
   }
  ],
  "metadata": {
