--- a/scraping/scraping.ipynb
+++ b/scraping/scraping.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
        "[[47.50202, 19.04901], [40.757339, -73.985992], [51.753738, -1.26346]]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -784,7 +784,625 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ZIP codes"
+    "#### using dictionaries for making queries and collecting response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nador_st': [47.50202, 19.04901],\n",
+       " 'oxford': [51.753738, -1.26346],\n",
+       " 'times_sq': [40.757339, -73.985992]}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latlon_dict = {\n",
+    "    'nador_st':[lat_nador_st, lon_nador_st],\n",
+    "    'times_sq':[lat_times_suqare, lon_times_square],\n",
+    "    'oxford':[lat_oxford, lon_oxford]\n",
+    "}\n",
+    "latlon_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[51.753738, -1.26346]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latlon_dict['oxford']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nador_st\n",
+      "http://api.open-notify.org/iss-pass.json?lat=47.50202&lon=19.04901&n=5\n",
+      "times_sq\n",
+      "http://api.open-notify.org/iss-pass.json?lat=40.757339&lon=-73.985992&n=5\n",
+      "oxford\n",
+      "http://api.open-notify.org/iss-pass.json?lat=51.753738&lon=-1.26346&n=5\n"
+     ]
+    }
+   ],
+   "source": [
+    "response_dict = {}\n",
+    "for place,coordinates in latlon_dict.items():\n",
+    "    url = \"http://api.open-notify.org/iss-pass.json?lat={}&lon={}&n=5\".format(coordinates[0], coordinates[1])\n",
+    "    print(place)\n",
+    "    print(url)\n",
+    "    resp = requests.get(url)\n",
+    "    time.sleep(3)\n",
+    "    resp_json = json.loads(resp.text)\n",
+    "    response_dict[place] = resp_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'message': 'success',\n",
+       " 'request': {'altitude': 100,\n",
+       "  'datetime': 1544426404,\n",
+       "  'latitude': 51.753738,\n",
+       "  'longitude': -1.26346,\n",
+       "  'passes': 5},\n",
+       " 'response': [{'duration': 495, 'risetime': 1544441885},\n",
+       "  {'duration': 625, 'risetime': 1544447566},\n",
+       "  {'duration': 642, 'risetime': 1544453337},\n",
+       "  {'duration': 639, 'risetime': 1544459126},\n",
+       "  {'duration': 599, 'risetime': 1544464916}]}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response_dict['oxford']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'duration': 495, 'risetime': 1544441885},\n",
+       " {'duration': 625, 'risetime': 1544447566},\n",
+       " {'duration': 642, 'risetime': 1544453337},\n",
+       " {'duration': 639, 'risetime': 1544459126},\n",
+       " {'duration': 599, 'risetime': 1544464916}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response_dict['oxford']['response']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'duration': 495, 'risetime': 1544441885}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response_dict['oxford']['response'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1544441885"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response_dict['oxford']['response'][0]['risetime']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first risetime above nador_st will be at 1544436238\n",
+      "The first risetime above times_sq will be at 1544452887\n",
+      "The first risetime above oxford will be at 1544441885\n"
+     ]
+    }
+   ],
+   "source": [
+    "for place,resp in response_dict.items():\n",
+    "    print('The first risetime above {} will be at {}'.format(place,resp['response'][0]['risetime']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1 - exercise\n",
+    "\n",
+    "We need the zip codes of the 5 landmarks in our data. Fortunatelly there is an API services that returns the zip codes when given a city name. <br>\n",
+    "Check the documentation here: https://developer.trade.gov/ita-zip-codes.html <br>\n",
+    "Try to construct an url that sends a request for San Jose! Open the url in the browser to see if it gives back meaningful result! <br>\n",
+    "(you'll need an authorization key, you can use this one: 2Waaf_H7jhob76CXWbwmeW7Q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### Your code here\n",
+    "url = 'https://api.trade.gov/ita_zipcode_to_post/search?api_key=2Waaf_H7jhob76CXWbwmeW7Q&q={}'.format('San Jose')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1 - check yourself"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your url is valid and the response is correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = requests.get(url)\n",
+    "if response.status_code == 200:\n",
+    "    if json.loads(response.text)['total'] == 139:\n",
+    "        print('Your url is valid and the response is correct')\n",
+    "    else:\n",
+    "        print('Your url is valid but the response is not for San Jose')\n",
+    "else:\n",
+    "    print('Your url is NOT valid')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2 - exercise\n",
+    "\n",
+    "Load the station.csv into a pandas dataframe and make a variable called landmarks that contains the unique values in the landmark column!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### your code here\n",
+    "import pandas as pd\n",
+    "station = pd.read_csv('/home/esztersomos/Documents/CEU/winter_2019/merging/station.csv')\n",
+    "\n",
+    "landmarks = station['landmark'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2 - check yourself"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The landmarks variable is correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "if sorted(landmarks) == sorted(['Redwood City', 'Mountain View', 'Palo Alto','San Francisco','San Jose']):\n",
+    "    print('The landmarks variable is correct')\n",
+    "else:\n",
+    "    print('The landmarks variable is NOT correct')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3 - exercise\n",
+    "Create an url that calls the trade.gov API and asks for the zip codes of the first city in the landmarks array. (Don't type in the name of the city, use a variable to format the url string!) <br>\n",
+    "Using the request library get a response for this url and save it into a variable called first_city_response!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### Your code here\n",
+    "url = 'https://api.trade.gov/ita_zipcode_to_post/search?api_key=2Waaf_H7jhob76CXWbwmeW7Q&q={}'.format(landmarks[0])\n",
+    "first_city_response = requests.get(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3 - check yourself"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your response variable is correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "if first_city_response.status_code == 200:\n",
+    "    print('Your response variable is correct')\n",
+    "else:\n",
+    "    print('Your response variable is NOT correct')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4 - exercise\n",
+    "Using the json package, load the text of the first_city_response into a dictionary called first_city_dict! <br>\n",
+    "Look at the dictionary and find the highest level key containing the zip_code information! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### Your code here\n",
+    "first_city_response = json.loads(first_city_response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "highest_level_key = "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4 - check yourself"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your answer was correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "if highest_level_key == 'results':\n",
+    "    print('Your answer was correct')\n",
+    "else:\n",
+    "    print('Your answer was NOT correct')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5 - exercise\n",
+    "Take the first element from the list that is the value for the key 'results'. What is the type of it?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Your code here\n",
+    "type(first_city_response['results'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "first_result_element_type = dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5 - check yourself\n",
+    "If your guess was dictionary, you are correct!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6 - exercise\n",
+    "Find the key that's value is the zip code! Make a variable called first_zip_code that contains the first zip code from the first_city_response!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### Your code here\n",
+    "first_zip_code = first_city_response['results'][0]['zip_code']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6 - check yourself"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You've found the zip code\n"
+     ]
+    }
+   ],
+   "source": [
+    "if first_zip_code.isdigit():\n",
+    "    print(\"You've found the zip code\")\n",
+    "else:\n",
+    "    print(\"It's not the zip code\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7 - exercise\n",
+    "Loop the results list in first_city_response, and collect the zip codes into a list called zip_codes!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### Your code here\n",
+    "zip_codes = [x['zip_code'] for x in first_city_response['results']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7 - check yourself"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your list is correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "if sum([x.isdigit() for x in zip_codes]) == 10:\n",
+    "    print('Your list is correct')\n",
+    "else:\n",
+    "    print('Your list is NOT correct')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8 - exercise\n",
+    "Make an empty dictionary called zip_codes_dict. <br>\n",
+    "Loop the landmarks array and for each landmark make a list containing the zip codes for it. (Just like we did before). When you have the list of zip codes, create a key for the landmark in the zip_codes_dict and assign the list of zip codes to it as the value! <br>\n",
+    "At the end the zip_codes_dict should look like something like this: <br><br>\n",
+    " {'San Jose' : ['1111','1112','1113'], <br>\n",
+    "  'San Francisco' : ['2221','2222','2223']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Your code here\n",
+    "zip_codes_dict = {}\n",
+    "for city in landmarks:\n",
+    "    apiresponse = requests.get(\n",
+    "        'https://api.trade.gov/ita_zipcode_to_post/search?api_key=2Waaf_H7jhob76CXWbwmeW7Q&q=' + city)\n",
+    "    zipjson = json.loads(apiresponse.text)\n",
+    "    zipz = []\n",
+    "    for r in zipjson['results']:\n",
+    "        zipz.append(r['zip_code'])\n",
+    "    zip_codes_dict[city] = zipz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8 - check yourself"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You collected the zip codes succesfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "correct_zip_codes_dict = {\n",
+    " 'Redwood City': [],\n",
+    " 'Mountain View': [],\n",
+    " 'Palo Alto': [],\n",
+    " 'San Francisco': ['94401','94402','94608','94662','94701','94702','94703','94704','94705','94707'],\n",
+    " 'San Jose': ['94303','94304','94305','94306','94309','94403','94404','94497','94536','94537']}\n",
+    "\n",
+    "if correct_zip_codes_dict == zip_codes_dict:\n",
+    "    print('You collected the zip codes succesfully')\n",
+    "else:\n",
+    "    print('Your collection is not correct')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hmmm, it looks like that we haven't found zip codes for 3 landmarks. This can happen when using an API service. But we wont' give up, it's a great opportunity to try a bit of scraping instead!"
    ]
   },
   {
@@ -3362,7 +3980,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "zipjson = json.loads(res.text)"
@@ -3832,7 +4452,9 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pd.DataFrame(city_rows).to_csv('city_zip_df.csv', index=False)"
