--- a/introduction/notebook_usage.ipynb
+++ b/introduction/notebook_usage.ipynb
@@ -29,6 +29,24 @@
    "source": [
     "Ide attenni az adat atnezest, kerdesfeltevest es a tobbi oran visszautalni hogy melyik kerdeshez kell/ kerdes szerint menni. Sok info arrol hogy milyen adatot valasszanak ok"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
